Cache Maven Dependencies

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,16 @@ jobs:
       - name: Step 3 - Have GitHub Actions Build Maven Project
         run: |
           mvn -B package --file pom.xml
+
+
+      - name: Step 4 - Set Up a cache for Maven
+        uses: actions/cache@v2
+        with:
+            path: ~/.m2
+            key: ${{runner.os}-m2-${hashFiles{'**/pom.xml'}}}
+            restore-keys: ${{runner.os}}-m2
           
-      - name: Step 4 - List the Enviroment Variables
+      - name: Step 5 - List the Enviroment Variables
         run: env
         
   build-on-windows:
@@ -50,7 +58,14 @@ jobs:
         run: |
           mvn -B package --file pom.xml
           
-      - name: Step 4 - List the Enviroment Variables
+      - name: Step 4 - Set Up a cache for Maven
+        uses: actions/cache@v2
+        with:
+            path: ~/.m2
+            key: ${{runner.os}-m2-${hashFiles{'**/pom.xml'}}}
+            restore-keys: ${{runner.os}}-m2
+          
+      - name: Step 5 - List the Enviroment Variables
         run: env
        
   build-on-macos:
@@ -73,5 +88,12 @@ jobs:
         run: |
           mvn -B package --file pom.xml
           
-      - name: Step 4 - List the Enviroment Variables
+      - name: Step 4 - Set Up a cache for Maven
+        uses: actions/cache@v2
+        with:
+            path: ~/.m2
+            key: ${{runner.os}-m2-${hashFiles{'**/pom.xml'}}}
+            restore-keys: ${{runner.os}}-m2
+          
+      - name: Step 5 - List the Enviroment Variables
         run: env
