Cache Maven Dependencies

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,12 @@ jobs:
           mvn -B package --file pom.xml
 
 
-      - name: Step 4 - Set Up a cache for Maven
+      - name: Step 4 - Set up a cache for Maven
         uses: actions/cache@v2
         with:
-            path: ~/.m2
-            key: ${{runner.os}-m2-${hashFiles{'**/pom.xml'}}}
-            restore-keys: ${{runner.os}}-m2
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
           
       - name: Step 5 - List the Enviroment Variables
         run: env
@@ -58,12 +58,12 @@ jobs:
         run: |
           mvn -B package --file pom.xml
           
-      - name: Step 4 - Set Up a cache for Maven
+      - name: Step 4 - Set up a cache for Maven
         uses: actions/cache@v2
         with:
-            path: ~/.m2
-            key: ${{runner.os}-m2-${hashFiles{'**/pom.xml'}}}
-            restore-keys: ${{runner.os}}-m2
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
           
       - name: Step 5 - List the Enviroment Variables
         run: env
@@ -88,12 +88,12 @@ jobs:
         run: |
           mvn -B package --file pom.xml
           
-      - name: Step 4 - Set Up a cache for Maven
+      - name: Step 4 - Set up a cache for Maven
         uses: actions/cache@v2
         with:
-            path: ~/.m2
-            key: ${{runner.os}-m2-${hashFiles{'**/pom.xml'}}}
-            restore-keys: ${{runner.os}}-m2
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
           
       - name: Step 5 - List the Enviroment Variables
         run: env
