--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Step 3 - Have GitHub Actions Build Maven Project
         run: |
           mvn -B package --file pom.xml
-
+          mkdir staging && cp target/*.jar staging
 
       - name: Step 4 - Set up a cache for Maven
         uses: actions/cache@v2
@@ -38,6 +38,12 @@ jobs:
       - name: Step 5 - List the Enviroment Variables
         run: env
         
+      - name: Step 6 - Persist workflow data as artificats
+        uses: actions/upload-artifact@v2
+        with:
+          name: github-actions-artifact
+          path: staging        
+          
   build-on-windows:
     # The type of runner that the job will run on
     runs-on: windows-latest
@@ -57,6 +63,7 @@ jobs:
       - name: Step 3 - Have GitHub Actions Build Maven Project
         run: |
           mvn -B package --file pom.xml
+          mkdir staging && cp target/*.jar staging
           
       - name: Step 4 - Set up a cache for Maven
         uses: actions/cache@v2
@@ -67,7 +74,13 @@ jobs:
           
       - name: Step 5 - List the Enviroment Variables
         run: env
-       
+     
+      - name: Step 6 - Persist workflow data as artificats
+        uses: actions/upload-artifact@v2
+        with:
+          name: github-actions-artifact
+          path: staging   
+          
   build-on-macos:
     # The type of runner that the job will run on
     runs-on: macos-latest
@@ -87,6 +100,7 @@ jobs:
       - name: Step 3 - Have GitHub Actions Build Maven Project
         run: |
           mvn -B package --file pom.xml
+          mkdir staging && cp target/*.jar staging
           
       - name: Step 4 - Set up a cache for Maven
         uses: actions/cache@v2
@@ -97,3 +111,9 @@ jobs:
           
       - name: Step 5 - List the Enviroment Variables
         run: env
+
+      - name: Step 6 - Persist workflow data as artificats
+        uses: actions/upload-artifact@v2
+        with:
+          name: github-actions-artifact
+          path: staging
